# mastoBot

./: .dockerignore  .gitignore  Dockerfile  README.md  config.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
examples/: config.yml
examples/raspberry_pi_docker/: Dockerfile  docker-compose.yml
examples/usage/: example_main.py
mastoBot/: __init__.py  configManager.py  helpers.py  mastoBot.py
